# routes/api.php
@@ -4,6 +4,7 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\NewsController;
+use App\Http\Controllers\CommentController;
 
 Route::post('/login', [AuthController::class, 'login']);
 
@@ -12,12 +13,24 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::get('/user', function (Request $request) {
         return $request->user();
     });
+
+    Route::prefix('comments')->controller(CommentController::class)->group(function () {
+        Route::post('/', 'store')->name('comments.store');
+        Route::put('/{comment}', 'update')->name('comments.update');
+        Route::delete('/{comment}', 'destroy')->name('comments.destroy');
+    });
 });
+
+
 
 Route::prefix('news')->controller(NewsController::class)->group(function () {
     Route::get('', 'index')->name('news.index');   
     Route::get('{news}', 'show')->name('news.show');
 });
 
+Route::prefix('comments')->controller(CommentController::class)->group(function () {
+    Route::get('', 'index')->name('comments.index');   
+    Route::get('{comment}', 'show')->name('comments.show');
+});
 
 
